chore(ux): remove avatar and stopped status icon, truncate long integration titles
remove avatar from header
remove pause icon from integration details page
truncate integration title in various places

--- a/app/ui-react/packages/ui/src/index.css
+++ b/app/ui-react/packages/ui/src/index.css
@@ -175,8 +175,3 @@ body {
 .wizard-pf-step-title {
   line-height: 24px;
 }
-
-.list-view-pf .list-group-item-heading {
-  white-space: normal;
-  word-break: break-all;
-}
